@@ -175,6 +175,7 @@ my $builder = $class->new(
         'Locale::Maketext::Lexicon'       => 0,
         'Locale::PO'                      => 0,
         'Makefile::Parser'                => 0,
+        'String::Similarity'              => 0,
         'Syntax::Highlight::Engine::Kate' => 0,
         'Template'                        => 0,
         'Term::ANSIColor'                 => 0,
@@ -216,6 +217,7 @@ my $builder = $class->new(
         'Locale::PO'                      => 0,
         'Makefile::Parser'                => 0,
         'perl'                            => '5.8.0',
+        'String::Similarity'              => 0,
         'Syntax::Highlight::Engine::Kate' => 0,
         'Term::ANSIColor'                 => 0,
         'Text::Wrap'                      => 0,
