@@ -1,5 +1,14 @@
 README for Publican
 
+Publican is a DocBook publication system, not just a DocBook processing tool.
+As well as ensuring your DocBook XML is valid, publican works to ensure
+your XML is up to publishable standard.
+
+Web:  http://publican.fedorahosted.org/
+Mail: https://www.redhat.com/mailman/listinfo/publican-list
+Source: http://svn.fedorahosted.org/svn/publican
+Bugs: https://bugzilla.redhat.com/bugzilla/enter_bug.cgi?product=Publican
+
 Assumptions: DocBook xml, *nix, en-US source language.
 
 Q: What actions are there?
