@@ -21,6 +21,7 @@
   - Fix wrong BuildRequires and path for desktop packages. BZ #676472
   - Correct typos. Yuri Chornoivan <yurchor@ukr.net> BZ #676997
   - Fix CreateBook texts missing from pot file. BZ #677119
+  - Add --TEST_PO_MERGE to update_po for testing.
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
